--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!Doctype HTML>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <title>Bla bla</title>
+  </head>
+  
+  <body>
+    <header>
+      <a>Bla bla bla</a>
+    </header>
+  </body>
+</html>
