--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <body>
     <header>
+      <a href="index.html">Biblioteca Digital Escolar</a>
       <a>Bla bla bla</a>
     </header>
   </body>
