--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <header>
       <a>Bla bla bla</a>
     </header>
+    <footer>
+      <p>
+        Maria Heloisa Lopes
+      </p>
+    </footer>
   </body>
 </html>
