--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
       <a>Bla bla bla</a>
     </header>
+    <main>
+      
+    </main>
     <footer>
       <p>
         Maria Heloisa Lopes
